fixed book chapters dropdown overflow issue

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -21,13 +21,10 @@ body {
   overflow: visible;
 }
 
-#content-wrapper {
-  @include clearfix;
-}
-
 aside {
   width: 218px;
   float: left;
+  margin-bottom: 35px;
 }
 
 #content {
@@ -40,6 +37,7 @@ aside {
   border: solid 1px #e2e0d8;
   @include border-radius(5px);
   padding: 22px;
+  margin-bottom: 35px;
 
   .two-column {
     @include clearfix;
